tests/NormalTests/paczka1/fuzzy1/85022834.err
Error in line 4: sAOF6 S601 36,5
Error in line 8: sAOF6 S598 8,5
